# zeph_heep

./: CMakeLists.txt  Kconfig  elf2xheep.py  zeph_heep.code-workspace
arch/riscv/x_heep/: linker.ld
boards/esl_epfl/x_heep/: CMakeLists.txt  Kconfig.x_heep  board.yml  x_heep.dts  x_heep_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  Kconfig  xheep_gpio.c
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  intc_rv_plic_opentitan.c  xheep_intc_fic.c  xheep_intc_fic.h  xheep_intc_plic.c
drivers/serial/: CMakeLists.txt  Kconfig  uart_x_heep.c  xheep_uart.c
drivers/timer/: CMakeLists.txt  Kconfig  xheep_rv_timer.c
dts/bindings/gpio/: esl-epfl,x-heep-gpio-ao.yaml  esl-epfl,x-heep-gpio.yaml
dts/bindings/interrupt-controller/: esl-epfl,x-heep-fic.yaml  esl-epfl,x-heep-plic.yaml
dts/bindings/serial/: esl-epfl,x-heep-uart.yaml
dts/bindings/timer/: esl-epfl,x-heep-rv-timer-ao.yaml  esl-epfl,x-heep-rv-timer.yaml
dts/riscv/x_heep/: x_heep.dtsi
soc/x_heep/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  reset.S  soc.c  soc.cmake  soc.h  soc.yml
sw/example_rgb/: CMakeLists.txt  Kconfig  prj.conf
sw/example_rgb/src/: main.c
sw/gpio_ao_test/: CMakeLists.txt  prj.conf
sw/gpio_ao_test/src/: main.c
sw/gpio_test/: CMakeLists.txt  prj.conf
sw/gpio_test/src/: main.c
sw/plic_test/: CMakeLists.txt  prj.conf
sw/plic_test/src/: main.c
sw/rv_timer_ao_test/: CMakeLists.txt  prj.conf
sw/rv_timer_ao_test/src/: main.c
sw/rv_timer_test/: CMakeLists.txt  prj.conf
sw/rv_timer_test/src/: main.c
sw/scheduling_test/: CMakeLists.txt  prj.conf
sw/scheduling_test/src/: main.c
sw/threading_test/: CMakeLists.txt  prj.conf
sw/threading_test/src/: main.c
sw/uart_plic_test/: CMakeLists.txt  prj.conf
sw/uart_plic_test/src/: main.c
sw/uart_test/: CMakeLists.txt  prj.conf
sw/uart_test/src/: main.c
x_heep_config/: zeph_heep.hjson
zephyr/: module.yml
